--- a/page.html
+++ b/page.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Asap&family=Hind&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Asap&family=Hind&family=Open+Sans:wght@300&display=swap'); </style>
+    <!-- не работают стили шрифтов -->
     <title>Document</title>
 </head>
 <body>
@@ -23,34 +29,38 @@
             </a>
             <a href="mailto:kubmaksim@gmail.com">kubmaksim@gmail.com</a>
         </div>
-    </div>
-    <!-- information about me -->
-    <div class="information">
-        Я начинающий програмист,страшноувлечен кодом и всем что с ним связано,<br>
-        постоянно развиваюсь в этой сфере,пробовал создавать небольшие сайты,<br>
-        создал телеграм бота по парсингу новостей,асистента(похожего на сири),<br>
-        хорошо знаком с основами и понимаю принципы ООП.
-    </div>
-    <!-- soft skil -->
-    <div class="skil">
-        <ul>
-            <li>Html</li>
-            <li>CSS</li>
-            <li>Django</li>
-            <li>APITelebot</li>
-        </ul>
-    </div>
-    <!-- progects -->
-    <div>
-        <div>Progects</div>
-        <div>
+        <div class="skil">
+            <span class="skils">Skils</span>
             <ul>
-                <li>Telegram bot</li>
-                <li>Asistent</li>
-                <li>Site</li>
+                <li>Html</li>
+                <li>CSS</li>
+                <li>Django</li>
+                <li>APITelebot</li>
             </ul>
         </div>
     </div>
+    <!-- information about me -->
+    <div class="information">
+        <span class="about_me"><h2>Немного обо мне</h3></span>
+        <h3 class="description">Я начинающий програмист,страшноувлечен кодом и всем что с ним связано,<br>
+        постоянно развиваюсь в этой сфере,пробовал создавать небольшие сайты,<br>
+        создал телеграм бота по парсингу новостей,асистента(похожего на сири),<br>
+        хорошо знаком с основами и понимаю принципы ООП.</h3>
+
+        <!-- progects -->
+        <div>
+            <div><h3>Progects</h3></div>
+            <div>
+                <ul>
+                    <li>Telegram bot</li>
+                    <li>Asistent</li>
+                    <li>Site</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- soft skil -->
+    
     <!-- motivation -->
     <div class="motivation">
 
