--- a/page.html
+++ b/page.html
@@ -8,26 +8,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Asap&family=Hind&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <style> @import url('https://fonts.googleapis.com/css2?family=Asap&family=Hind&family=Open+Sans:wght@300&display=swap'); </style>
-    <!-- не работают стили шрифтов -->
+    <link href="https://fonts.googleapis.com/css2?family=Asap&family=Hind&family=Open+Sans:wght@300&display=swap" rel="stylesheet">    <!-- не работают стили шрифтов -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Asap:wght@300&family=Hind&family=Open+Sans:wght@300&family=Sofia+Sans+Condensed:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <!-- information about photo number mail -->
     <div class="about">
         <div class="photo">
-            <img src="templates/photo.jpeg" alt="photo" width="200">
+            <img src="templates/photo.jpeg" alt="photo" width="240">
         </div>
         <div class="contact">
-            <a href="tel:+380971676764">+380971676764
-                <ul>
-                    <li>Telegram</li>
-                    <li>Whatsapp</li>
-                    <li>Vider</li>
-                </ul>
-            </a>
-            <a href="mailto:kubmaksim@gmail.com">kubmaksim@gmail.com</a>
+            <div class="">
+                <span>Contact</span>
+                <a href="tel:+380971676764">+380971676764
+                    <ul>
+                        <li>Telegram</li>
+                        <li>Whatsapp</li>
+                        <li>Vider</li>
+                    </ul>
+                </a>
+            </div>
+            <div>
+                <a href="mailto:kubmaksim@gmail.com">kubmaksim@gmail.com</a>
+            </div>
         </div>
         <div class="skil">
             <span class="skils">Skils</span>
@@ -41,6 +48,9 @@
     </div>
     <!-- information about me -->
     <div class="information">
+        <div class="name">
+            Pichov Maksim
+        </div>
         <span class="about_me"><h2>Немного обо мне</h3></span>
         <h3 class="description">Я начинающий програмист,страшноувлечен кодом и всем что с ним связано,<br>
         постоянно развиваюсь в этой сфере,пробовал создавать небольшие сайты,<br>
