--- a/page.html
+++ b/page.html
@@ -8,53 +8,60 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- information about photo number mail -->
-    <div class="about">
-        <div class="photo">
-            <img src="templates/photo.jpeg" alt="photo" width="200">
-        </div>
-        <div class="contact">
-            <a href="tel:+380971676764">+380971676764
-                <ul>
-                    <li>Telegram</li>
-                    <li>Whatsapp</li>
-                    <li>Vider</li>
-                </ul>
-            </a>
-            <a href="mailto:kubmaksim@gmail.com">kubmaksim@gmail.com</a>
-        </div>
-    </div>
-    <!-- information about me -->
-    <div class="information">
-        Я начинающий програмист,страшноувлечен кодом и всем что с ним связано,<br>
-        постоянно развиваюсь в этой сфере,пробовал создавать небольшие сайты,<br>
-        создал телеграм бота по парсингу новостей,асистента(похожего на сири),<br>
-        хорошо знаком с основами и понимаю принципы ООП.
-    </div>
-    <!-- soft skil -->
-    <div class="skil">
-        <ul>
-            <li>Html</li>
-            <li>CSS</li>
-            <li>Django</li>
-            <li>APITelebot</li>
-        </ul>
-    </div>
-    <!-- progects -->
     <div>
-        <div>Progects</div>
-        <div>
+        <div class="about">
+            <div class="photo">
+                <img src="templates/photo.jpeg" alt="photo" width="200">
+            </div>
+            <div class="contact">
+                <a href="tel:+380971676764">+380971676764
+                    <ul>
+                        <li>Telegram</li>
+                        <li>Whatsapp</li>
+                        <li>Vider</li>
+                    </ul>
+                </a>
+                <a href="mailto:kubmaksim@gmail.com">kubmaksim@gmail.com</a>
+            </div>
+        </div>
+        <!-- information about me -->
+        <div class="inf">
+            <div class="name">
+                <span>Pichov Maksim</span>
+            </div>
+            <div class="information">
+                Я начинающий програмист,страшноувлечен кодом и всем что с ним связано,<br>
+                постоянно развиваюсь в этой сфере,пробовал создавать небольшие сайты,<br>
+                создал телеграм бота по парсингу новостей,асистента(похожего на сири),<br>
+                хорошо знаком с основами и понимаю принципы ООП.
+            </div>
+        </div>
+ 
+        <!-- soft skil -->
+        <div class="skil">
             <ul>
-                <li>Telegram bot</li>
-                <li>Asistent</li>
-                <li>Site</li>
+                <li>Html</li>
+                <li>CSS</li>
+                <li>Django</li>
+                <li>APITelebot</li>
             </ul>
         </div>
-    </div>
-    <!-- motivation -->
-    <div class="motivation">
+        <!-- progects -->
+        <div>
+            <div>Progects</div>
+            <div>
+                <ul>
+                    <li>Telegram bot</li>
+                    <li>Asistent</li>
+                    <li>Site</li>
+                </ul>
+            </div>
+        </div>
+        <!-- motivation -->
+        <div class="motivation">
 
-    </div>
-    hello world
+        </div>
+    </div><!-- information about photo number mail -->
+
 </body>
 </html>
