--- a/page.html
+++ b/page.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -25,9 +28,9 @@
             </div>
         </div>
         <!-- information about me -->
-        <div class="inf">
+        <div>
             <div class="name">
-                <span>Pichov Maksim</span>
+                <span class="inf">Pichov Maksim</span>
             </div>
             <div class="information">
                 Я начинающий програмист,страшноувлечен кодом и всем что с ним связано,<br>
