--- a/page.html
+++ b/page.html
@@ -13,9 +13,7 @@
 <body>
     <div>
         <div class="about">
-            <div class="photo">
-                <img src="templates/photo.jpeg" alt="photo" width="200">
-            </div>
+            <img class="photo" src="templates/photo.jpeg" alt="photo" >
             <div class="contact">
                 <a href="tel:+380971676764">+380971676764
                     <ul>
