--- a/page.html
+++ b/page.html
@@ -8,20 +8,32 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Overpass&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <div>
         <div class="about">
-            <img class="photo" src="templates/photo.jpeg" alt="photo" >
+            <div class="photo">
+                <img src="templates/photo.jpeg" alt="photo" >
+            </div>
             <div class="contact">
-                <a href="tel:+380971676764">+380971676764
+                <span class="con">CONTACT</span><br>
+                <a class="telefon" href="tel:+380971676764">+380971676764</a>
                     <ul>
-                        <li>Telegram</li>
-                        <li>Whatsapp</li>
-                        <li>Vider</li>
+                        <li><a href="https://telegram.me/Maksim_Kub" class="telega">Telegram</a></li>
+                        <li><a href="" class="watcapp">Whatsapp</a></li>
+                        <li><a href="viber://add?number=+380971676764" class="viber">Vider</a></li>
                     </ul>
-                </a>
                 <a href="mailto:kubmaksim@gmail.com">kubmaksim@gmail.com</a>
             </div>
         </div>
@@ -29,6 +41,8 @@
         <div>
             <div class="name">
                 <span class="inf">Pichov Maksim</span>
+                <br>
+                <span class="developer">Back-end developer</span>
             </div>
             <div class="information">
                 Я начинающий програмист,страшноувлечен кодом и всем что с ним связано,<br>
