--- a/page.html
+++ b/page.html
@@ -28,13 +28,13 @@
             </div>
             <div class="contact">
                 <span class="con">CONTACT</span><br>
+                <a class="mail" href="mailto:kubmaksim@gmail.com">kubmaksim@gmail.com</a><br>
                 <a class="telefon" href="tel:+380971676764">+380971676764</a>
-                    <ul>
-                        <li><a href="https://telegram.me/Maksim_Kub" class="telega">Telegram</a></li>
-                        <li><a href="" class="watcapp">Whatsapp</a></li>
-                        <li><a href="viber://add?number=+380971676764" class="viber">Vider</a></li>
+                    <ul class="ul">
+                        <ol><a class="color1" href="https://telegram.me/Maksim_Kub" class="telega">Telegram</a></ol>
+                        <ol><a class="color1" href="" class="telega">Whatsapp</a></ol>
+                        <ol><a class="color1" href="viber://add?number=+380971676764" class="telega">Vider</a></ol>
                     </ul>
-                <a href="mailto:kubmaksim@gmail.com">kubmaksim@gmail.com</a>
             </div>
         </div>
         <!-- information about me -->
@@ -45,20 +45,25 @@
                 <span class="developer">Back-end developer</span>
             </div>
             <div class="information">
-                Я начинающий програмист,страшноувлечен кодом и всем что с ним связано,<br>
-                постоянно развиваюсь в этой сфере,пробовал создавать небольшие сайты,<br>
-                создал телеграм бота по парсингу новостей,асистента(похожего на сири),<br>
-                хорошо знаком с основами и понимаю принципы ООП.
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+
+
             </div>
         </div>
  
         <!-- soft skil -->
         <div class="skil">
+            <span class="color_1">Skills</span>
             <ul>
-                <li>Html</li>
-                <li>CSS</li>
-                <li>Django</li>
-                <li>APITelebot</li>
+                <li><span>Html</span></li>
+                <li><span>CSS</span></li>
+                <li><span>Python</span></li>
+                <li><span>Django</span></li>
+                <li><span>APITelebot</span></li>
             </ul>
         </div>
         <!-- progects -->
