--- a/page.html
+++ b/page.html
@@ -45,13 +45,11 @@
                 <span class="developer">Back-end developer</span>
             </div>
             <div class="information">
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-
-
+                I am a beginner Python developer with experience in Django, Telegram API, and BeautifulSoup.
+                I have developed various projects using these technologies, including web scraping, chatbot creation, and web applications.
+                I am confident in my skills and ready for new projects and challenges.
+                I am determined, self-motivated, and ready for new challenges. I am willing to work both independently and as part of a team.
+                I am passionate about software development and eager to learn and grow to become an experienced Python developer.
             </div>
         </div>
  
@@ -64,16 +62,17 @@
                 <li><span>Python</span></li>
                 <li><span>Django</span></li>
                 <li><span>APITelebot</span></li>
+                <li><span>BeautifulSoup</span></li>
             </ul>
         </div>
         <!-- progects -->
-        <div>
-            <div>Progects</div>
+        <div  class="project">
+            <div class="Progects">Progects</div>
             <div>
                 <ul>
-                    <li>Telegram bot</li>
-                    <li>Asistent</li>
-                    <li>Site</li>
+                    <li class="l"><span class="l"><a class="experience" href="https://github.com/Kubmaksim/Telebot">Telegram bot</a> - news parsing</span></li>
+                    <li class="l"><span class="l"><a class="experience" href="https://github.com/Kubmaksim/asistent">Asistent</a> - using BeautifulSoup</span></li>
+                    <li class="l"><span class="l"><a class="experience" href="https://github.com/Kubmaksim/my_portfolio">Site</a> - on Django</span></li>
                 </ul>
             </div>
         </div>
